# flow-state

./: .cursorrules  .dev-maestro.json  .dockerignore  .env  .env.development  .env.example  .env.production  .env.self-host.example  .gitignore  AGENTS.md  BUG_TEST_PLAN_POSITION_JUMP.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.prod  Dockerfile  Dockerfile.postgres  Dockerfile.sync-backend  FlowState-Dev.desktop  LICENSE  PR_DETAILS.md  README.md  TASK-262-DROPOFF.md  TASK-rename-to-flowstate.md  build_output.txt  capacitor.config.ts  components_lint_report.json  console-task-1348.txt  create-test-tasks.html  css_validation_results.txt  current-state.md  current_lint_errors.txt  current_tsc_errors.txt  debug-parser.cjs  debug_log.txt  debug_log_2.txt  docker-compose.prod.yml  docker-compose.self-host.yml  docker-compose.yml  eslint-batch3.json  (+76 more)
.Jules/: bolt.md  palette.md  sentinel.md
.beads/: daemon-error  issues.jsonl
.claude/: HOOKS.md  last-test-results.json  set-task.sh  settings.json  settings.json.backup  statusline.sh  storybook-review-progress.md  user-confirmed-completion  ⚖️ TRUTHFULNESS_MANDATE.md
.storybook/: README.md  main.ts  manager-head.html  manager.ts  preview-head.html  preview.ts  storybook-dark-override.css  theme.ts  vitest.setup.ts
android/: capacitor.settings.gradle
audit-reports/: health-audit-2026-01-09.json  health-audit-2026-01-09.md
backups/: RECOVERY-2026-01-15T23-16-49-145Z.json  shadow.db
coverage/: coverage-summary.json
dev-dist/: sw.js
dev-maestro/: .env.example  .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  server.js
dev-manager/: .env.example  .gitignore  README.md  SOP-BUG-021-force-graph-iframe-fix.md  index.html  install.sh  package-lock.json  package.json  server.js
docs/: AGENTS.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  MASTER_PLAN.md  POWERSYNC-DEPLOYMENT.md  PRD_TASK_PROJECT_UNIFICATION.md  PROGRESS_LOG.md  SELF-HOSTING.md  TASK_LINKING_FIXES.md  ai-router-implementation.md  dropoff.md  game-mechanics.md  raw-ideas-issues.md
plans/: canvas-group-system-refactor.md  canvas-group-task-counting-tests.md  canvas-position-system-refactor.md  canvas-view-stabilization-eliminate-resets.md  dev-manager-health-dashboard.md  fix-task-position-jump-after-edit.md  flow-state-landing-page.md  improve-milkdown-or-replace.md  pomo-flow-landing-page.md  pwa-mobile-support.md  system-consolidation-audit.md  system-tech-debt-audit-2026-01-10.md
playwright-report/: index.html
public/: logo-preview.html  restore-backup.html  shadow-latest.json  task-recovery.html  tasks.json
reports/: 2026-01-20-auth-data-loss-analysis.md
scripts/: add-missing-columns.cjs  agent-dashboard.sh  analyze-conflicts.cjs  archive-completed-tasks.js  assess-ai-health.cjs  auto-backup-daemon.cjs  backup-db.sh  build-and-install.sh  build-capacitor-android.sh  check-skill-staleness.cjs  check-vite-secrets.cjs  cleanup-orphan-tasks.cjs  db-stop.sh  debug-create-tasks.js  debug_eslint_config.js  debug_eslint_rules.js  deploy-tauri-update.sh  fix-cloudflare-cache.sh  generate-docs-graph.cjs  generate-skills-graph.cjs  generate-sql-insert.cjs  generate-stress-report.cjs  generate-supabase-keys.cjs  generate-update-manifest.cjs  init-postgres.sql  install-and-test.sh  install-git-hooks.sh  jwks.json  kill-flow-state.sh  kill-pomo-instances.sh  lint-check.js  lint-watch.js  migrate-console-to-logger.cjs  migrate-couchdb-to-supabase.cjs  migrate-db.mjs  migrate-to-tokens.cjs  next-interactive.sh  perform-cleanup.cjs  perform-dead-code-cleanup.cjs  phase-progress-checker.cjs  (+38 more)
src/: App.vue  main.ts  main.ts.backup  mcp-crash-monitor.cjs  mcp-health-monitor.cjs  sw.ts  test-coordinates.ts  wal_test_script.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
supabase/: config.toml  schema.sql  seed.sql
test-results/: .last-run.json
tests/: bug-1354-calendar-timer-duplicate.spec.ts  canvas-drag-filter.spec.ts  canvas-load-debug.spec.ts  canvas-parent-child.spec.ts  canvas-position-persistence.spec.ts  debug-startup.spec.ts  debug-sync-state.spec.ts  design-system.spec.ts  dev-manager-orchestrator.spec.ts  e2e-basic-functionality.spec.ts  e2e-comprehensive-functionality.spec.ts  e2e-task-linking-simple.spec.ts  e2e-task-linking.spec.ts  i18n-rtl-ltr-clickability.spec.ts  inject-debug-data.html  markdown-editor.spec.ts  quick-screenshot.spec.ts  quick-task-modal-test.spec.ts  (+10 more)
(+1824 files in other folders)
