[package]
name = "flow-state"
version = "1.2.66"
description = "FlowState - Productivity app with task management and pomodoro timer"
authors = ["EndlessBlink"]
license = "MIT"
repository = "https://github.com/endlessblink/flow-state"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
default = []
# Enable devtools in dev builds only (cargo build), disabled in release (cargo build --release)
devtools = ["tauri/devtools"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.7"
tauri-plugin-shell = "2"
# BUG-1289: tauri-plugin-notification disabled — block_on() panic on Linux
# tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
tauri-plugin-dialog = { version = "2.6", default-features = false, features = ["xdg-portal"] }
tauri-plugin-fs = "2.4"
tauri-plugin-store = "2"
tauri-plugin-oauth = "2"

# BUG-1115: Release profile optimizations for better performance
[profile.release]
lto = true           # Link-Time Optimization - smaller binary, better runtime
codegen-units = 1    # Single codegen unit for better optimization (slower compile)
strip = false        # Required - strip = true removes __TAURI_BUNDLE_TYPE symbol needed by updater
opt-level = 3        # Maximum optimization
panic = "unwind"     # Allow panic recovery instead of instant process death

[profile.dev]
opt-level = 0        # No optimization in dev for faster compilation
